2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update dotemacs-core macros

	* site-lisp/dotemacs-core.el (delq!, remq!): New macros.
	(alist-del!): Use a special keyword as the default value to avoid
	conflicts.
	* init.el: Use `delq!'.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update tramp settings

	* init.el: Enable connection-local profile
	`remote-explicit-shell-file-name' and
	`remote-direct-async-process' for all ssh-based tramp protocols.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-flymake-byte-compile): Use
	`elisp-flymake-byte-compile--executable'

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/flymake-define.el (flymake-define): Remove condition-case.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Limit savehist saved kill-ring entries

	* init.el (savehist-additional-variables): Limit maximum saved
	kill-ring entries to 5.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Optimize theme and font configuration

	* init.el (+init-fontsets): Run `+fontsets-initilize-hook' after
	init.
	Require modus-themes unconditionally.

	* site-lisp/dotemacs-core.el (after-init-1!): New function.
	(after-init!): New macro.

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	Fix incorrect fixed pitch face when xft is used

	* init.el (+init-fontsets): Use fontset-term instead of fontset-fixed in
	fixed-pitch faces.

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	* init.el: Delay loading of doom-modeline to `emacs-startup-hook'.

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	Remove helper function after loading

	* init.el (completion-in-region@corfu): Unbound the function after
	loading corfu.

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	Fix font setting error on tty

	* init.el (nerd-icons-set-font): Add advice to make it only take
	effect in graphic display.

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	Do mode tagging for good-doc.el

	* site-lisp/good-doc.el (good-doc-goto-target, good-doc-go-back)
	(good-doc-go-forward, good-doc-next-entry)
	(good-doc-previous-entry, good-doc-goto-page)