@@ -1,5 +1,9 @@
 2025-09-24  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (dotemacs-theme-refresh): Use modus-themes-with-colors.
+
+2025-09-24  Zhengyi Fu  <i@fuzy.me>
+
 	Update dotemacs-core macros
 
 	* site-lisp/dotemacs-core.el (delq!, remq!): New macros.
